Update curves on data changes even if those changes doesn't change the plot ranges.

BUG: 403561
FIXED-IN: 2.6